# mhm

./: .gitlab-ci.yml  LICENSE.md  pyproject.toml
.github/workflows/: main.yml
CI-scripts/: hdf5-install  install-deps  install-deps-sudo  nc-install  nf-install  zlib-install
doc/: doxygen.config  header_doxygen.tex
doc/figures/logo/: mhm5-logo.eps
pybind/examples/: 01_simple_run.py  02_time_steps.py  03_plot.py  04_grid_info.py
src/: CMakeLists.txt
